--- a/index.html
+++ b/index.html
@@ -1,12 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flower shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <!-- banner section -->
+        <section>
+            <div class="banner-container">
+                <div class="banner-title">
+                    <h1 class="title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                    <p class="banner-lorem">It is a long established fact that a reader will be distracted by the
+                        readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is
+                        <br> that it has a more-or-less normal distribution of letters.
+                    </p>
+                    <button class="banner-btn">Shop Now</button>
+                </div>
+
+                <div class="banner-flower">
+                    <img class="banner-img" src="images/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
+
+
+    <main>
+        <!-- Featured section -->
+        <section>
+            <div class="Featured">
+                <h3 class="Featured-title">Our Featured Flowers</h3>
+                <p class="Featured-lorem">It is a long established fact that a reader will be distracted by the readable
+                    <br> content of a page when looking at its layout.
+                </p>
+            </div>
+
+            <div class="box-container">
+                <div class="box1">
+                    <img class="pic" src="images/pngwing 6.png" alt="">
+                    <p class="flower-name"><u>Pink Flower Tree</u></p>
+                </div>
+                <div class="box2">
+                    <img class="pic" src="images/pngwing 5.png" alt="">
+                    <p class="flower-name"><u>Pink Flower Tree</u></p>
+                </div>
+                <div class="box3">
+                    <img class="pic" src="images/pngwing 7.png" alt="">
+                    <p class="flower-name"><u>Pink Flower Tree</u></p>
+                </div>
+            </div>
+        </section>
+
+        <!-- hot-deal-container -->
+        <section>
+            <div class="hot-deal-container">
+                <div class="hot">
+                    <h2 class="hot-title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h2>
+                    <p class="hot-lorem">It is a long established fact that a reader will be distracted by the readable
+                        <br> content of a
+                        page when looking at its layout.
+                    </p>
+                    <button class="btn banner-btn">Sign Up</button>
+                </div>
+                <div class="hot-flower">
+                    <img src="images/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Instagram -->
+        <section>
+            <div class="instagram">
+                <h3 class="instagram-title  hot-title">Instagram</h3>
+                <p class="instagram-lorem  hot-lorem">It is a long established fact that a reader will be distracted by
+                    the readable <br>content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="img-container">
+                <div class="box">
+                    <img class="img" src="images/Flower 01.png" alt="">
+                </div>
+                <div class="box">
+                    <img class="img" src="images/Rectangle 4.png" alt="">
+                </div>
+                <div class="box">
+                    <img class="img" src="images/Rectangle 5.png" alt="">
+                </div>
+                <div class="box">
+                    <img class="img" src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Get The Latest Deals -->
+        <section>
+            <div class="deals-container">
+                <div class="deals">
+                    <h1 class="deals-title">Get The Latest Deals</h1>
+                    <p class="deals-lorem">$30 coupon for first shopping</p>
+                </div>
+                <div class="input-Subscribe">
+                    <input class="input" type="text" placeholder="Enter your email here....">
+                    <input class="banner-btn " type="submit" value="submit">
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <div class="footer">
+            <h1 class="flower"><span class="off">Flower</span>Shop</h1>
+            <p class="flower-lorem">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <p class="flower-text">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
